--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -1,5 +1,8 @@
 Flask==2.2.3
 Flask-CORS==3.0.10
+google-auth==2.23.4
+google-api-python-client==2.108.0
 openpyxl==3.1.2
 pandas==2.1.1
 Werkzeug==2.2.3
+
